<resources>
    <string name="app_name">AutoAddContact</string>
    <string name="action_settings">Settings</string>
    <string name="tips">该应用可以自动添加联系人，选择删除联系人将没添加2个联系人后删除一个，选择检查联系人数量将没添加10条检查一次联系人数量，
        测试结果保存在手机存储的根目录下。</string>
    <string name="contact_type">联系人类型</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="test_type">测试项</string>
    <string name="add">添加联系人</string>
    <string name="delete">删除联系人</string>
    <string name="check">检查联系人</string>
    <string name="start">开始</string>
</resources>
