<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.uitest.autoaddcontact.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="328dp"
        android:layout_height="73dp"
        android:text="@string/tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        android:layout_marginRight="8dp"
        android:id="@+id/textView3"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:text="@string/contact_type"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="151dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        app:layout_constraintLeft_toRightOf="@+id/chinese"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="42dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:text="@string/test_type"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/chinese"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/delete_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintLeft_toRightOf="@+id/add_contact"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="23dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="313dp"
        android:layout_height="60dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="434dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.555" />

    <CheckBox
        android:id="@+id/check_contact"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:text="@string/check"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/add_contact"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:text="添加联系人数："
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:text="10"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:layout_marginTop="83dp"
        android:layout_marginStart="10dp" />

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="128dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="367dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/test_msg"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="393dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
